# FacialGestureRecognition

./: .replit  app.py  eye_eyebrow_detector.py  pyproject.toml  replit.nix  requirements.txt  utils.py
.streamlit/: config.toml
